y.output
State 65 conflicts: 1 shift/reduce
State 167 conflicts: 21 reduce/reduce
State 168 conflicts: 21 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE Program2 RBRACE

    2 Program2: FieldDecl Program2
    3         | MethodDecl Program2
    4         | SEMICOLON Program2
    5         | /* empty */

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    8          | error SEMICOLON

    9 FieldDecl2: COMMA ID FieldDecl2
   10           | /* empty */

   11 Type: BOOL
   12     | DOUBLE
   13     | INT

   14 MethodHeader: Type ID LPAR MethodHeader2 RPAR
   15             | VOID ID LPAR MethodHeader2 RPAR

   16 MethodHeader2: FormalParams
   17              | /* empty */

   18 FormalParams: Type ID FormalParams2
   19             | STRING LSQ RSQ ID

   20 FormalParams2: COMMA Type ID FormalParams2
   21              | /* empty */

   22 MethodBody: LBRACE MethodBody2 RBRACE

   23 MethodBody2: Statement MethodBody2
   24            | VarDecl MethodBody2
   25            | /* empty */

   26 VarDecl: Type ID VarDecl2 SEMICOLON

   27 VarDecl2: COMMA ID VarDecl2
   28         | /* empty */

   29 Statement: LBRACE Statement2 RBRACE
   30          | IF LPAR Expr RPAR Statement
   31          | IF LPAR Expr RPAR Statement ELSE Statement
   32          | WHILE LPAR Expr RPAR Statement
   33          | RETURN Expr SEMICOLON
   34          | Statement3 SEMICOLON
   35          | PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | error SEMICOLON

   37 Statement2: Statement Statement2
   38           | /* empty */

   39 Statement3: MethodInvocation
   40           | Assignment
   41           | ParseArgs
   42           | /* empty */

   43 StatementPrint: Expr
   44               | STRLIT

   45 MethodInvocation: ID LPAR MethodInvocation2 RPAR
   46                 | ID LPAR error RPAR

   47 MethodInvocation2: Expr MethodInvocation3
   48                  | /* empty */

   49 MethodInvocation3: Expr MethodInvocation3
   50                  | /* empty */

   51 Assignment: ID ASSIGN Expr

   52 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | PARSEINT LPAR error RPAR

   54 Expr: Assignment
   55     | Expr2

   56 Expr2: Expr PLUS Expr
   57      | Expr MINUS Expr
   58      | Expr STAR Expr
   59      | Expr DIV Expr
   60      | Expr MOD Expr
   61      | Expr AND Expr
   62      | Expr OR Expr
   63      | Expr XOR Expr
   64      | Expr LSHIFT Expr
   65      | Expr RSHIFT Expr
   66      | Expr EQ Expr
   67      | Expr GE Expr
   68      | Expr GT Expr
   69      | Expr LE Expr
   70      | Expr LT Expr
   71      | Expr NE Expr
   72      | MINUS Expr
   73      | PLUS Expr
   74      | NOT Expr
   75      | ID DOTLENGTH
   76      | ID
   77      | Expr3
   78      | LPAR Expr RPAR
   79      | LPAR error RPAR
   80      | Expr4

   81 Expr3: MethodInvocation
   82      | ParseArgs

   83 Expr4: INTLIT
   84      | REALLIT
   85      | BOOLLIT


Terminals, with rules where they appear

$end (0) 0
error (256) 8 36 46 53 79
LPAR (258) 14 15 30 31 32 35 45 46 52 53 78 79
BOOL (259) 11
DOUBLE (260) 12
INT (261) 13
VOID (262) 15
CLASS (263) 1
LBRACE (264) 1 22 29
ASSIGN (265) 51
RBRACE (266) 1 22 29
PARSEINT (267) 52 53
PUBLIC (268) 6 7
STATIC (269) 6 7
ELSE (270) 31
WHILE (271) 32
SEMICOLON (272) 4 7 8 26 33 34 35 36
RPAR (273) 14 15 30 31 32 35 45 46 52 53 78 79
STRING (274) 19
COMMA (275) 9 20 27
LSQ (276) 19 52
RSQ (277) 19 52
IF (278) 30 31
RETURN (279) 33
PRINT (280) 35
PLUS (281) 56 73
MINUS (282) 57 72
STAR (283) 58
DIV (284) 59
MOD (285) 60
AND (286) 61
OR (287) 62
XOR (288) 63
LSHIFT (289) 64
RSHIFT (290) 65
EQ (291) 66
GE (292) 67
GT (293) 68
LE (294) 69
LT (295) 70
NE (296) 71
NOT (297) 74
DOTLENGTH (298) 75
ID (299) 1 7 9 14 15 18 19 20 26 27 45 46 51 52 75 76
INTLIT (300) 83
REALLIT (301) 84
BOOLLIT (302) 85
STRLIT (303) 44
UNARY (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
Program (51)
    on left: 1, on right: 0
Program2 (52)
    on left: 2 3 4 5, on right: 1 2 3 4
MethodDecl (53)
    on left: 6, on right: 3
FieldDecl (54)
    on left: 7 8, on right: 2
FieldDecl2 (55)
    on left: 9 10, on right: 7 9
Type (56)
    on left: 11 12 13, on right: 7 14 18 20 26
MethodHeader (57)
    on left: 14 15, on right: 6
MethodHeader2 (58)
    on left: 16 17, on right: 14 15
FormalParams (59)
    on left: 18 19, on right: 16
FormalParams2 (60)
    on left: 20 21, on right: 18 20
MethodBody (61)
    on left: 22, on right: 6
MethodBody2 (62)
    on left: 23 24 25, on right: 22 23 24
VarDecl (63)
    on left: 26, on right: 24
VarDecl2 (64)
    on left: 27 28, on right: 26 27
Statement (65)
    on left: 29 30 31 32 33 34 35 36, on right: 23 30 31 32 37
Statement2 (66)
    on left: 37 38, on right: 29 37
Statement3 (67)
    on left: 39 40 41 42, on right: 34
StatementPrint (68)
    on left: 43 44, on right: 35
MethodInvocation (69)
    on left: 45 46, on right: 39 81
MethodInvocation2 (70)
    on left: 47 48, on right: 45
MethodInvocation3 (71)
    on left: 49 50, on right: 47 49
Assignment (72)
    on left: 51, on right: 40 54
ParseArgs (73)
    on left: 52 53, on right: 41 82
Expr (74)
    on left: 54 55, on right: 30 31 32 33 43 47 49 51 52 56 57 58 59
    60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 78
Expr2 (75)
    on left: 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80, on right: 55
Expr3 (76)
    on left: 81 82, on right: 77
Expr4 (77)
    on left: 83 84 85, on right: 80


state 0

    0 $accept: . Program $end
    1 Program: . CLASS ID LBRACE Program2 RBRACE

    CLASS  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: CLASS . ID LBRACE Program2 RBRACE

    ID  shift, and go to state 3


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


state 3

    1 Program: CLASS ID . LBRACE Program2 RBRACE

    LBRACE  shift, and go to state 5


state 4

    0 $accept: Program $end .

    $default  accept


state 5

    1 Program: CLASS ID LBRACE . Program2 RBRACE
    2 Program2: . FieldDecl Program2
    3         | . MethodDecl Program2
    4         | . SEMICOLON Program2
    5         | .  [RBRACE]
    6 MethodDecl: . PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: . PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    8          | . error SEMICOLON

    error      shift, and go to state 6
    PUBLIC     shift, and go to state 7
    SEMICOLON  shift, and go to state 8

    RBRACE  reduce using rule 5 (Program2)

    Program2    go to state 9
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 6

    8 FieldDecl: error . SEMICOLON

    SEMICOLON  shift, and go to state 12


state 7

    6 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC . STATIC Type ID FieldDecl2 SEMICOLON

    STATIC  shift, and go to state 13


state 8

    2 Program2: . FieldDecl Program2
    3         | . MethodDecl Program2
    4         | . SEMICOLON Program2
    4         | SEMICOLON . Program2
    5         | .  [RBRACE]
    6 MethodDecl: . PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: . PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    8          | . error SEMICOLON

    error      shift, and go to state 6
    PUBLIC     shift, and go to state 7
    SEMICOLON  shift, and go to state 8

    RBRACE  reduce using rule 5 (Program2)

    Program2    go to state 14
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 9

    1 Program: CLASS ID LBRACE Program2 . RBRACE

    RBRACE  shift, and go to state 15


state 10

    2 Program2: . FieldDecl Program2
    3         | . MethodDecl Program2
    3         | MethodDecl . Program2
    4         | . SEMICOLON Program2
    5         | .  [RBRACE]
    6 MethodDecl: . PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: . PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    8          | . error SEMICOLON

    error      shift, and go to state 6
    PUBLIC     shift, and go to state 7
    SEMICOLON  shift, and go to state 8

    RBRACE  reduce using rule 5 (Program2)

    Program2    go to state 16
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 11

    2 Program2: . FieldDecl Program2
    2         | FieldDecl . Program2
    3         | . MethodDecl Program2
    4         | . SEMICOLON Program2
    5         | .  [RBRACE]
    6 MethodDecl: . PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: . PUBLIC STATIC Type ID FieldDecl2 SEMICOLON
    8          | . error SEMICOLON

    error      shift, and go to state 6
    PUBLIC     shift, and go to state 7
    SEMICOLON  shift, and go to state 8

    RBRACE  reduce using rule 5 (Program2)

    Program2    go to state 17
    MethodDecl  go to state 10
    FieldDecl   go to state 11


state 12

    8 FieldDecl: error SEMICOLON .

    $default  reduce using rule 8 (FieldDecl)


state 13

    6 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC . Type ID FieldDecl2 SEMICOLON
   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   14 MethodHeader: . Type ID LPAR MethodHeader2 RPAR
   15             | . VOID ID LPAR MethodHeader2 RPAR

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    VOID    shift, and go to state 21

    Type          go to state 22
    MethodHeader  go to state 23


state 14

    4 Program2: SEMICOLON Program2 .

    $default  reduce using rule 4 (Program2)


state 15

    1 Program: CLASS ID LBRACE Program2 RBRACE .

    $default  reduce using rule 1 (Program)


state 16

    3 Program2: MethodDecl Program2 .

    $default  reduce using rule 3 (Program2)


state 17

    2 Program2: FieldDecl Program2 .

    $default  reduce using rule 2 (Program2)


state 18

   11 Type: BOOL .

    $default  reduce using rule 11 (Type)


state 19

   12 Type: DOUBLE .

    $default  reduce using rule 12 (Type)


state 20

   13 Type: INT .

    $default  reduce using rule 13 (Type)


state 21

   15 MethodHeader: VOID . ID LPAR MethodHeader2 RPAR

    ID  shift, and go to state 24


state 22

    7 FieldDecl: PUBLIC STATIC Type . ID FieldDecl2 SEMICOLON
   14 MethodHeader: Type . ID LPAR MethodHeader2 RPAR

    ID  shift, and go to state 25


state 23

    6 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody
   22 MethodBody: . LBRACE MethodBody2 RBRACE

    LBRACE  shift, and go to state 26

    MethodBody  go to state 27


state 24

   15 MethodHeader: VOID ID . LPAR MethodHeader2 RPAR

    LPAR  shift, and go to state 28


state 25

    7 FieldDecl: PUBLIC STATIC Type ID . FieldDecl2 SEMICOLON
    9 FieldDecl2: . COMMA ID FieldDecl2
   10           | .  [SEMICOLON]
   14 MethodHeader: Type ID . LPAR MethodHeader2 RPAR

    LPAR   shift, and go to state 29
    COMMA  shift, and go to state 30

    $default  reduce using rule 10 (FieldDecl2)

    FieldDecl2  go to state 31


state 26

   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   22 MethodBody: LBRACE . MethodBody2 RBRACE
   23 MethodBody2: . Statement MethodBody2
   24            | . VarDecl MethodBody2
   25            | .  [RBRACE]
   26 VarDecl: . Type ID VarDecl2 SEMICOLON
   29 Statement: . LBRACE Statement2 RBRACE
   30          | . IF LPAR Expr RPAR Statement
   31          | . IF LPAR Expr RPAR Statement ELSE Statement
   32          | . WHILE LPAR Expr RPAR Statement
   33          | . RETURN Expr SEMICOLON
   34          | . Statement3 SEMICOLON
   35          | . PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | . error SEMICOLON
   39 Statement3: . MethodInvocation
   40           | . Assignment
   41           | . ParseArgs
   42           | .  [SEMICOLON]
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR

    error     shift, and go to state 32
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    INT       shift, and go to state 20
    LBRACE    shift, and go to state 33
    PARSEINT  shift, and go to state 34
    WHILE     shift, and go to state 35
    IF        shift, and go to state 36
    RETURN    shift, and go to state 37
    PRINT     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 25 (MethodBody2)
    SEMICOLON  reduce using rule 42 (Statement3)

    Type              go to state 40
    MethodBody2       go to state 41
    VarDecl           go to state 42
    Statement         go to state 43
    Statement3        go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


state 27

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 6 (MethodDecl)


state 28

   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   15 MethodHeader: VOID ID LPAR . MethodHeader2 RPAR
   16 MethodHeader2: . FormalParams
   17              | .  [RPAR]
   18 FormalParams: . Type ID FormalParams2
   19             | . STRING LSQ RSQ ID

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 48

    $default  reduce using rule 17 (MethodHeader2)

    Type           go to state 49
    MethodHeader2  go to state 50
    FormalParams   go to state 51


state 29

   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   14 MethodHeader: Type ID LPAR . MethodHeader2 RPAR
   16 MethodHeader2: . FormalParams
   17              | .  [RPAR]
   18 FormalParams: . Type ID FormalParams2
   19             | . STRING LSQ RSQ ID

    BOOL    shift, and go to state 18
    DOUBLE  shift, and go to state 19
    INT     shift, and go to state 20
    STRING  shift, and go to state 48

    $default  reduce using rule 17 (MethodHeader2)

    Type           go to state 49
    MethodHeader2  go to state 52
    FormalParams   go to state 51


state 30

    9 FieldDecl2: COMMA . ID FieldDecl2

    ID  shift, and go to state 53


state 31

    7 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 . SEMICOLON

    SEMICOLON  shift, and go to state 54


state 32

   36 Statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 55


state 33

   29 Statement: . LBRACE Statement2 RBRACE
   29          | LBRACE . Statement2 RBRACE
   30          | . IF LPAR Expr RPAR Statement
   31          | . IF LPAR Expr RPAR Statement ELSE Statement
   32          | . WHILE LPAR Expr RPAR Statement
   33          | . RETURN Expr SEMICOLON
   34          | . Statement3 SEMICOLON
   35          | . PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | . error SEMICOLON
   37 Statement2: . Statement Statement2
   38           | .  [RBRACE]
   39 Statement3: . MethodInvocation
   40           | . Assignment
   41           | . ParseArgs
   42           | .  [SEMICOLON]
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    PARSEINT  shift, and go to state 34
    WHILE     shift, and go to state 35
    IF        shift, and go to state 36
    RETURN    shift, and go to state 37
    PRINT     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 38 (Statement2)
    SEMICOLON  reduce using rule 42 (Statement3)

    Statement         go to state 56
    Statement2        go to state 57
    Statement3        go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


state 34

   52 ParseArgs: PARSEINT . LPAR ID LSQ Expr RSQ RPAR
   53          | PARSEINT . LPAR error RPAR

    LPAR  shift, and go to state 58


state 35

   32 Statement: WHILE . LPAR Expr RPAR Statement

    LPAR  shift, and go to state 59


state 36

   30 Statement: IF . LPAR Expr RPAR Statement
   31          | IF . LPAR Expr RPAR Statement ELSE Statement

    LPAR  shift, and go to state 60


state 37

   33 Statement: RETURN . Expr SEMICOLON
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR
   54 Expr: . Assignment
   55     | . Expr2
   56 Expr2: . Expr PLUS Expr
   57      | . Expr MINUS Expr
   58      | . Expr STAR Expr
   59      | . Expr DIV Expr
   60      | . Expr MOD Expr
   61      | . Expr AND Expr
   62      | . Expr OR Expr
   63      | . Expr XOR Expr
   64      | . Expr LSHIFT Expr
   65      | . Expr RSHIFT Expr
   66      | . Expr EQ Expr
   67      | . Expr GE Expr
   68      | . Expr GT Expr
   69      | . Expr LE Expr
   70      | . Expr LT Expr
   71      | . Expr NE Expr
   72      | . MINUS Expr
   73      | . PLUS Expr
   74      | . NOT Expr
   75      | . ID DOTLENGTH
   76      | . ID
   77      | . Expr3
   78      | . LPAR Expr RPAR
   79      | . LPAR error RPAR
   80      | . Expr4
   81 Expr3: . MethodInvocation
   82      | . ParseArgs
   83 Expr4: . INTLIT
   84      | . REALLIT
   85      | . BOOLLIT

    LPAR      shift, and go to state 61
    PARSEINT  shift, and go to state 34
    PLUS      shift, and go to state 62
    MINUS     shift, and go to state 63
    NOT       shift, and go to state 64
    ID        shift, and go to state 65
    INTLIT    shift, and go to state 66
    REALLIT   shift, and go to state 67
    BOOLLIT   shift, and go to state 68

    MethodInvocation  go to state 69
    Assignment        go to state 70
    ParseArgs         go to state 71
    Expr              go to state 72
    Expr2             go to state 73
    Expr3             go to state 74
    Expr4             go to state 75


state 38

   35 Statement: PRINT . LPAR StatementPrint RPAR SEMICOLON

    LPAR  shift, and go to state 76


state 39

   45 MethodInvocation: ID . LPAR MethodInvocation2 RPAR
   46                 | ID . LPAR error RPAR
   51 Assignment: ID . ASSIGN Expr

    LPAR    shift, and go to state 77
    ASSIGN  shift, and go to state 78


state 40

   26 VarDecl: Type . ID VarDecl2 SEMICOLON

    ID  shift, and go to state 79


state 41

   22 MethodBody: LBRACE MethodBody2 . RBRACE

    RBRACE  shift, and go to state 80


state 42

   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   23 MethodBody2: . Statement MethodBody2
   24            | . VarDecl MethodBody2
   24            | VarDecl . MethodBody2
   25            | .  [RBRACE]
   26 VarDecl: . Type ID VarDecl2 SEMICOLON
   29 Statement: . LBRACE Statement2 RBRACE
   30          | . IF LPAR Expr RPAR Statement
   31          | . IF LPAR Expr RPAR Statement ELSE Statement
   32          | . WHILE LPAR Expr RPAR Statement
   33          | . RETURN Expr SEMICOLON
   34          | . Statement3 SEMICOLON
   35          | . PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | . error SEMICOLON
   39 Statement3: . MethodInvocation
   40           | . Assignment
   41           | . ParseArgs
   42           | .  [SEMICOLON]
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR

    error     shift, and go to state 32
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    INT       shift, and go to state 20
    LBRACE    shift, and go to state 33
    PARSEINT  shift, and go to state 34
    WHILE     shift, and go to state 35
    IF        shift, and go to state 36
    RETURN    shift, and go to state 37
    PRINT     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 25 (MethodBody2)
    SEMICOLON  reduce using rule 42 (Statement3)

    Type              go to state 40
    MethodBody2       go to state 81
    VarDecl           go to state 42
    Statement         go to state 43
    Statement3        go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


state 43

   11 Type: . BOOL
   12     | . DOUBLE
   13     | . INT
   23 MethodBody2: . Statement MethodBody2
   23            | Statement . MethodBody2
   24            | . VarDecl MethodBody2
   25            | .  [RBRACE]
   26 VarDecl: . Type ID VarDecl2 SEMICOLON
   29 Statement: . LBRACE Statement2 RBRACE
   30          | . IF LPAR Expr RPAR Statement
   31          | . IF LPAR Expr RPAR Statement ELSE Statement
   32          | . WHILE LPAR Expr RPAR Statement
   33          | . RETURN Expr SEMICOLON
   34          | . Statement3 SEMICOLON
   35          | . PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | . error SEMICOLON
   39 Statement3: . MethodInvocation
   40           | . Assignment
   41           | . ParseArgs
   42           | .  [SEMICOLON]
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR

    error     shift, and go to state 32
    BOOL      shift, and go to state 18
    DOUBLE    shift, and go to state 19
    INT       shift, and go to state 20
    LBRACE    shift, and go to state 33
    PARSEINT  shift, and go to state 34
    WHILE     shift, and go to state 35
    IF        shift, and go to state 36
    RETURN    shift, and go to state 37
    PRINT     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 25 (MethodBody2)
    SEMICOLON  reduce using rule 42 (Statement3)

    Type              go to state 40
    MethodBody2       go to state 82
    VarDecl           go to state 42
    Statement         go to state 43
    Statement3        go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


state 44

   34 Statement: Statement3 . SEMICOLON

    SEMICOLON  shift, and go to state 83


state 45

   39 Statement3: MethodInvocation .

    $default  reduce using rule 39 (Statement3)


state 46

   40 Statement3: Assignment .

    $default  reduce using rule 40 (Statement3)


state 47

   41 Statement3: ParseArgs .

    $default  reduce using rule 41 (Statement3)


state 48

   19 FormalParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 84


state 49

   18 FormalParams: Type . ID FormalParams2

    ID  shift, and go to state 85


state 50

   15 MethodHeader: VOID ID LPAR MethodHeader2 . RPAR

    RPAR  shift, and go to state 86


state 51

   16 MethodHeader2: FormalParams .

    $default  reduce using rule 16 (MethodHeader2)


state 52

   14 MethodHeader: Type ID LPAR MethodHeader2 . RPAR

    RPAR  shift, and go to state 87


state 53

    9 FieldDecl2: . COMMA ID FieldDecl2
    9           | COMMA ID . FieldDecl2
   10           | .  [SEMICOLON]

    COMMA  shift, and go to state 30

    $default  reduce using rule 10 (FieldDecl2)

    FieldDecl2  go to state 88


state 54

    7 FieldDecl: PUBLIC STATIC Type ID FieldDecl2 SEMICOLON .

    $default  reduce using rule 7 (FieldDecl)


state 55

   36 Statement: error SEMICOLON .

    $default  reduce using rule 36 (Statement)


state 56

   29 Statement: . LBRACE Statement2 RBRACE
   30          | . IF LPAR Expr RPAR Statement
   31          | . IF LPAR Expr RPAR Statement ELSE Statement
   32          | . WHILE LPAR Expr RPAR Statement
   33          | . RETURN Expr SEMICOLON
   34          | . Statement3 SEMICOLON
   35          | . PRINT LPAR StatementPrint RPAR SEMICOLON
   36          | . error SEMICOLON
   37 Statement2: . Statement Statement2
   37           | Statement . Statement2
   38           | .  [RBRACE]
   39 Statement3: . MethodInvocation
   40           | . Assignment
   41           | . ParseArgs
   42           | .  [SEMICOLON]
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR

    error     shift, and go to state 32
    LBRACE    shift, and go to state 33
    PARSEINT  shift, and go to state 34
    WHILE     shift, and go to state 35
    IF        shift, and go to state 36
    RETURN    shift, and go to state 37
    PRINT     shift, and go to state 38
    ID        shift, and go to state 39

    RBRACE     reduce using rule 38 (Statement2)
    SEMICOLON  reduce using rule 42 (Statement3)

    Statement         go to state 56
    Statement2        go to state 89
    Statement3        go to state 44
    MethodInvocation  go to state 45
    Assignment        go to state 46
    ParseArgs         go to state 47


state 57

   29 Statement: LBRACE Statement2 . RBRACE

    RBRACE  shift, and go to state 90


state 58

   52 ParseArgs: PARSEINT LPAR . ID LSQ Expr RSQ RPAR
   53          | PARSEINT LPAR . error RPAR

    error  shift, and go to state 91
    ID     shift, and go to state 92


state 59

   32 Statement: WHILE LPAR . Expr RPAR Statement
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR
   54 Expr: . Assignment
   55     | . Expr2
   56 Expr2: . Expr PLUS Expr
   57      | . Expr MINUS Expr
   58      | . Expr STAR Expr
   59      | . Expr DIV Expr
   60      | . Expr MOD Expr
   61      | . Expr AND Expr
   62      | . Expr OR Expr
   63      | . Expr XOR Expr
   64      | . Expr LSHIFT Expr
   65      | . Expr RSHIFT Expr
   66      | . Expr EQ Expr
   67      | . Expr GE Expr
   68      | . Expr GT Expr
   69      | . Expr LE Expr
   70      | . Expr LT Expr
   71      | . Expr NE Expr
   72      | . MINUS Expr
   73      | . PLUS Expr
   74      | . NOT Expr
   75      | . ID DOTLENGTH
   76      | . ID
   77      | . Expr3
   78      | . LPAR Expr RPAR
   79      | . LPAR error RPAR
   80      | . Expr4
   81 Expr3: . MethodInvocation
   82      | . ParseArgs
   83 Expr4: . INTLIT
   84      | . REALLIT
   85      | . BOOLLIT

    LPAR      shift, and go to state 61
    PARSEINT  shift, and go to state 34
    PLUS      shift, and go to state 62
    MINUS     shift, and go to state 63
    NOT       shift, and go to state 64
    ID        shift, and go to state 65
    INTLIT    shift, and go to state 66
    REALLIT   shift, and go to state 67
    BOOLLIT   shift, and go to state 68

    MethodInvocation  go to state 69
    Assignment        go to state 70
    ParseArgs         go to state 71
    Expr              go to state 93
    Expr2             go to state 73
    Expr3             go to state 74
    Expr4             go to state 75


state 60

   30 Statement: IF LPAR . Expr RPAR Statement
   31          | IF LPAR . Expr RPAR Statement ELSE Statement
   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR
   54 Expr: . Assignment
   55     | . Expr2
   56 Expr2: . Expr PLUS Expr
   57      | . Expr MINUS Expr
   58      | . Expr STAR Expr
   59      | . Expr DIV Expr
   60      | . Expr MOD Expr
   61      | . Expr AND Expr
   62      | . Expr OR Expr
   63      | . Expr XOR Expr
   64      | . Expr LSHIFT Expr
   65      | . Expr RSHIFT Expr
   66      | . Expr EQ Expr
   67      | . Expr GE Expr
   68      | . Expr GT Expr
   69      | . Expr LE Expr
   70      | . Expr LT Expr
   71      | . Expr NE Expr
   72      | . MINUS Expr
   73      | . PLUS Expr
   74      | . NOT Expr
   75      | . ID DOTLENGTH
   76      | . ID
   77      | . Expr3
   78      | . LPAR Expr RPAR
   79      | . LPAR error RPAR
   80      | . Expr4
   81 Expr3: . MethodInvocation
   82      | . ParseArgs
   83 Expr4: . INTLIT
   84      | . REALLIT
   85      | . BOOLLIT

    LPAR      shift, and go to state 61
    PARSEINT  shift, and go to state 34
    PLUS      shift, and go to state 62
    MINUS     shift, and go to state 63
    NOT       shift, and go to state 64
    ID        shift, and go to state 65
    INTLIT    shift, and go to state 66
    REALLIT   shift, and go to state 67
    BOOLLIT   shift, and go to state 68

    MethodInvocation  go to state 69
    Assignment        go to state 70
    ParseArgs         go to state 71
    Expr              go to state 94
    Expr2             go to state 73
    Expr3             go to state 74
    Expr4             go to state 75


state 61

   45 MethodInvocation: . ID LPAR MethodInvocation2 RPAR
   46                 | . ID LPAR error RPAR
   51 Assignment: . ID ASSIGN Expr
   52 ParseArgs: . PARSEINT LPAR ID LSQ Expr RSQ RPAR
   53          | . PARSEINT LPAR error RPAR
   54 Expr: . Assignment
   55     | . Expr2
   56 Expr2: . Expr PLUS Expr
   57      | . Expr MINUS Expr
   58      | . Expr STAR Expr
   59      | . Expr DIV Expr
   60      | . Expr MOD Expr
   61      | . Expr AND Expr
   62      | . Expr OR Expr
   63      | . Expr XOR Expr
   64      | . Expr LSHIFT Expr
   65      | . Expr RSHIFT Expr
   66      | . Expr EQ Expr
   67      | . Expr GE Expr
   68      | . Expr GT Expr
   69      | . Expr LE Expr
   70      | . Expr LT Expr
   71      | . Expr NE Expr
   72      | . MINUS Expr
   73      | . PLUS Expr
   74      | . NOT Expr
   75      | . ID DOTLENGTH
   76      | . ID
   77      | . Expr3
   78      | . LPAR Expr RPAR
   78      | LPAR . Expr RPAR
   79      | . LPAR error RPAR
   79      | LPAR . error RPAR
   80      | . Expr4
   81 Expr3: . MethodInvocation
   82      | . ParseArgs
   83 Expr4: . INTLIT
   84      | . REALLIT
   85      | . BOOLLIT

    error     shift, and go to state 95
    LPAR      shift, and go to state 61
    PARSEINT  shift, and go to state 34
    PLUS      shift, and go to state 62
    MINUS     shift, and go to state 63
    NOT       shift, and go to state 64
    ID        shift, and go to state 65
    INTLIT    shift, and go to state 66
    REALLIT   shift, and go to state 67
    BOOLLIT   shift, and go to state 68
